--- a/index.html
+++ b/index.html
@@ -19,43 +19,20 @@
 
 			var container;
 			var camera, scene, renderer;
+			var RAD_90  = 90/180*Math.PI;
 
 			var teamMesh, teamMaterial;
-			var cubeGeo, cubeMaterial,cubeMesh;
-			var tween;
 
-			var objects = [];
-
-			var pos = 0.0;
-			var curve;
-
-			var dae;
+			var missileDae;
 
 			var teamsData = [];
 
 			init();
 			animate();
 
-			function move(){
-				if(typeof(dae)=="undefined")
-					return;
-
-			    if(pos < 1){
-			        dae.position.copy(curve.getPointAt(pos));
-			        dae.rotation.y= -curve.getTangentAt(pos).z;
-			        // dae.rotation.copy(curve.getTangentAt(pos));
-			        // dae.rotation.y +=0.01;
-			        console.log(dae.rotation.x);
-			        pos += 0.01;
-
-			    }else{
-			        // pos = 0.0;
-			    }
-			}
 
 			function attack( startTeam , endTeam , time ){
-				var missile = dae.clone();
-				var RAD_90  = 90/180*Math.PI;
+				var missile = missileDae.clone();
 				var quaternion = new THREE.Quaternion();
 				var rotation = new THREE.Euler();
 
@@ -86,7 +63,7 @@
 				var material = new THREE.LineBasicMaterial({color : 0xff0000});
 				var line = new THREE.Line(geometry, material);
 
-				scene.add( line );
+				// scene.add( line );
 
 				scene.add(missile);
 				var tangent; 
@@ -103,7 +80,7 @@
 									.onComplete(function(){
 										scene.remove(missile);
 										missile = null;
-										scene.remove(line);
+										// scene.remove(line);
 										line = null;
 									})
 									.start();
@@ -174,17 +151,17 @@
 
 
 				loader.load( 'models/miss.dae', function ( collada ) {
-					dae = collada.scene;
-					dae.traverse( function ( child ) {
+					missileDae = collada.scene;
+					missileDae.traverse( function ( child ) {
 						if ( child instanceof THREE.SkinnedMesh ) {
 								var animation = new THREE.Animation( child, child.geometry.animation );
 								animation.play();
 							}
 					});
-					dae.position.set(0,0,0);
-					// dae.rotation.z += 90/180*Math.PI;
-					dae.scale.set(1,1,1);
-					scene.add( dae );
+					missileDae.position.set(0,0,0);
+					// missileDae.rotation.z += 90/180*Math.PI;
+					missileDae.scale.set(1,1,1);
+
 					attack(teamsData[0],teamsData[12],5000);
 				}, onProgress, onError);
 
@@ -239,7 +216,6 @@
 
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
-
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
 			}
@@ -249,15 +225,15 @@
 
 				requestAnimationFrame( animate );
 				render();
-				stats.update();
 
 			}
 
 
 			function render() {
-			//	move();
+
 				controls.update();
 				TWEEN.update();
+				stats.update();
 				renderer.render( scene, camera );
 
 			}
