--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="js/libs/jquery.min.js"></script>
 	<script src="js/libs/tween.js"></script>
 	<script src="js/libs/three.min.js"></script>
+	<script src="js/libs/GPUParticleSystem.js" charset="utf-8"></script>
 	<script src="js/loaders/OBJLoader.js"></script>
 	<script src="js/loaders/ColladaLoader2.js"></script>
 	<script src="js/loaders/OBJLoader.js"></script>
