修改模型尺寸，测试粒子效果

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="js/libs/jquery.min.js"></script>
 	<script src="js/libs/tween.js"></script>
 	<script src="js/libs/three.min.js"></script>
-	<script src="js/libs/GPUParticleSystem.js" charset="utf-8"></script>
+	<script src="./js/libs/GPUParticleSystem.js" charset="utf-8"></script>
 	<script src="js/loaders/OBJLoader.js"></script>
 	<script src="js/loaders/ColladaLoader2.js"></script>
 	<script src="js/loaders/OBJLoader.js"></script>
@@ -31,6 +31,6 @@
 	<script src="js/renderers/Projector.js"></script>
 	<script src="js/renderers/CanvasRenderer.js"></script>
 	<script src="js/libs/stats.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="js/index2.js"></script>
 </body>
 </html>
