--- a/particles.html
+++ b/particles.html
@@ -21,13 +21,13 @@
 		<script src="js/libs/three.min.js"></script>
 
 		<script src="js/renderers/Projector.js"></script>
-
+		<script src="js/controls/TrackballControls.js"></script>
 		<script src="js/libs/stats.min.js"></script>
 		<script src="js/libs/tween.min.js"></script>
 
 		<script>
 
-			var container, stats;
+			var container, stats,controls;
 			var camera, scene, renderer, particle;
 			var mouseX = 0, mouseY = 0;
 
@@ -37,13 +37,31 @@
 			init();
 			animate();
 
+
+			function makeSkybox( urls, size ) {
+
+				var skyboxCubemap = new THREE.CubeTextureLoader().load( urls );
+				skyboxCubemap.format = THREE.RGBFormat;
+				var skyboxShader = THREE.ShaderLib['cube'];
+				skyboxShader.uniforms['tCube'].value = skyboxCubemap;
+				return new THREE.Mesh(
+					new THREE.BoxGeometry( size, size, size ),
+					new THREE.ShaderMaterial({
+						fragmentShader : skyboxShader.fragmentShader, vertexShader : skyboxShader.vertexShader,
+						uniforms : skyboxShader.uniforms, depthWrite : false, side : THREE.BackSide
+					})
+				);
+
+			}
+
 			function init() {
 
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
 				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 5000 );
-				camera.position.z = 1000;
+				// camera.position.z = 1000;
+				camera.position.set( 0, -2800, 2000 );
 
 				scene = new THREE.Scene();
 
@@ -65,6 +83,12 @@
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				container.appendChild( renderer.domElement );
 
+				controls = new THREE.TrackballControls(camera, renderer.domElement);
+				controls.rotateSpeed = 5.0;
+				controls.zoomSpeed = 2.2;
+				controls.panSpeed = 1;
+				controls.dynamicDampingFactor = 0.3;
+
 				stats = new Stats();
 				container.appendChild( stats.dom );
 
@@ -75,6 +99,13 @@
 				//
 
 				window.addEventListener( 'resize', onWindowResize, false );
+
+				var r = "img/skybox1/";
+				var urls = [ r + "px.jpg", r + "nx.jpg",
+							 r + "py.jpg", r + "ny.jpg",
+							 r + "pz.jpg", r + "nz.jpg" ];
+
+				scene.add( makeSkybox( urls, 50000 ) );
 
 			}
 
@@ -131,7 +162,7 @@
 
 				new TWEEN.Tween( particle.scale )
 					.delay( delay )
-					.to( { x: 10, y: 10 }, 300 )
+					.to( { x: 0.1, y: 0.1 }, 300 )
 					.onComplete(function(){
 						particle.visible = false;
 					})
@@ -181,6 +212,7 @@
 
 				render();
 				stats.update();
+				controls.update();
 
 			}
 
