--- a/particles.html
+++ b/particles.html
@@ -34,8 +34,19 @@
 			var windowHalfX = window.innerWidth / 2;
 			var windowHalfY = window.innerHeight / 2;
 
+			var curve = new THREE.SplineCurve3([
+							    new THREE.Vector3(0, 0, 0),
+							    new THREE.Vector3(2000, 0 , 1600), 
+							    new THREE.Vector3(4000 , 0, 1600),
+							    new THREE.Vector3(6000, 0, 0)
+							]);
+
+			var particleSystems = [];
+
 			init();
 			animate();
+
+
 
 
 			function makeSkybox( urls, size ) {
@@ -54,29 +65,76 @@
 
 			}
 
+			function initparticleSystems(){
+
+				var material = new THREE.SpriteMaterial( {
+						map: new THREE.CanvasTexture( generateSprite() ),
+						blending: THREE.AdditiveBlending
+					});
+
+				for(var i=0;i<20;i++){
+					var particleArr = {
+						available : true,
+						particles : []
+					};
+					for(var j=0;j<50;j++){
+						var particle = new THREE.Sprite( material );
+						particle.pos = 0;
+						particle.visible = false;
+						particleArr.particles.push(particle);
+						scene.add(particle);
+					}
+					console.log(particleArr);
+					particleSystems.push(particleArr);
+				}
+			}
+
+			// function pstest(){
+			// 	for(var i=0;i<particleSystems.length;i++){
+			// 		if(particleSystems[i].available){
+			// 			particleSystems[i].available = false;
+			// 			var ps = particleSystems[i];
+			// 			for(var j=0;j<ps.particles.length;j++){
+			// 				ps.particles[j].scale.set(320-j*5,320-j*5,320-j*5);
+			// 				initParticle( ps.particles[j], j * 10 );
+			// 				scene.add( ps.particles[j] );
+			// 			}
+			// 			break;
+			// 		}
+			// 	}
+			// }
+
+			function pstest(){
+				for(var i=0;i<particleSystems.length;i++){
+					if(particleSystems[i].available){
+						startParticles( particleSystems[i] ); 
+						break;
+					}
+				}
+			}
+
 			function init() {
 
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 5000 );
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 100000 );
 				// camera.position.z = 1000;
-				camera.position.set( 0, -2800, 2000 );
+				camera.position.set( 0, -5600, 4000 );
 
 				scene = new THREE.Scene();
 
-				var material = new THREE.SpriteMaterial( {
-					map: new THREE.CanvasTexture( generateSprite() ),
-					blending: THREE.AdditiveBlending
-				} );
+				initparticleSystems();
 
-				for ( var i = 0; i < 1000; i++ ) {
+				// for ( var i = 0; i < 30; i++ ) {
 
-					particle = new THREE.Sprite( material );
-					initParticle( particle, i * 10 );
-					scene.add( particle );
-				}
-
+				// 	particle = new THREE.Sprite( material );
+				// 	particle.pos = 0;
+				// 	particle.scale.set(320-i*3.1,320-i*3.1,320-i*0.31);
+				// 	initParticle( particle, i * 10 );
+				// 	scene.add( particle );
+				// }
+				pstest();
 				renderer = new THREE.WebGLRenderer();
 				renderer.setClearColor( 0x000000 );
 				renderer.setPixelRatio( window.devicePixelRatio );
@@ -91,10 +149,6 @@
 
 				stats = new Stats();
 				container.appendChild( stats.dom );
-
-				document.addEventListener( 'mousemove', onDocumentMouseMove, false );
-				document.addEventListener( 'touchstart', onDocumentTouchStart, false );
-				document.addEventListener( 'touchmove', onDocumentTouchMove, false );
 
 				//
 
@@ -141,68 +195,56 @@
 
 			}
 
-			function initParticle( particle, delay ) {
+			// function initParticle( particle, delay ) {
 
-				var particle = this instanceof THREE.Sprite ? this : particle;
-				var delay = delay !== undefined ? delay : 0;
+			// 	new TWEEN.Tween( particle )
+			// 		.delay( delay )
+			// 		.to( {pos:1}, 3000 )
+			// 		.onUpdate(function(){
+			// 			particle.position.copy(curve.getPointAt(particle.pos));
+			// 		})
+			// 		.onComplete(function(){
+			// 			particle.pos = 0;
+			// 			particle.visible = false;
+			// 		})
+			// 		.start();
 
-				particle.position.set( 0, 0, 0 );
-				particle.scale.x = particle.scale.y = Math.random() * 32 + 16;
+			// }
 
-				new TWEEN.Tween( particle )
-					.delay( delay )
-					.to( {}, 10000 )
-					.onComplete( initParticle )
-					.start();
+			function startParticles( particleSystem ) {
+				
+				particleSystem.available = false;
 
-				new TWEEN.Tween( particle.position )
-					.delay( delay )
-					.to( { x: 0, y: 0, z: 1000 }, 1000 )
-					.start();
+				var lastParticle = particleSystem.particles[particleSystem.particles.length-1];
 
-				new TWEEN.Tween( particle.scale )
-					.delay( delay )
-					.to( { x: 0.1, y: 0.1 }, 300 )
-					.onComplete(function(){
-						particle.visible = false;
-					})
-					.start();
+				for(var i=0;i<particleSystem.particles.length;i++){
+
+					var particle = particleSystem.particles[i];
+					particle.visible = true;
+					particle.scale.set(320-i*3.1,320-i*3.1,320-i*0.31);
+					new TWEEN.Tween( particle )
+						.delay( i*20 )
+						.to( {pos:1}, 1000 )
+						.onUpdate(function(){
+							this.position.copy(curve.getPointAt(this.pos));
+						})
+						.onComplete(function(){
+							this.pos = 0;
+							this.visible = false;
+							if(this === lastParticle){
+								particleSystem.available = true;
+							}			
+						})
+						.start();
+				}
 
 			}
+
 
 			//
 
-			function onDocumentMouseMove( event ) {
 
-				mouseX = event.clientX - windowHalfX;
-				mouseY = event.clientY - windowHalfY;
-			}
 
-			function onDocumentTouchStart( event ) {
-
-				if ( event.touches.length == 1 ) {
-
-					event.preventDefault();
-
-					mouseX = event.touches[ 0 ].pageX - windowHalfX;
-					mouseY = event.touches[ 0 ].pageY - windowHalfY;
-
-				}
-
-			}
-
-			function onDocumentTouchMove( event ) {
-
-				if ( event.touches.length == 1 ) {
-
-					event.preventDefault();
-
-					mouseX = event.touches[ 0 ].pageX - windowHalfX;
-					mouseY = event.touches[ 0 ].pageY - windowHalfY;
-
-				}
-
-			}
 
 			//
 
@@ -220,8 +262,6 @@
 
 				TWEEN.update();
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
 				camera.lookAt( scene.position );
 
 				renderer.render( scene, camera );
