将队伍布局数据和初始化数据分离出来

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	<script src="js/controls/TrackballControls.js"></script>
 	<script src="js/renderers/Projector.js"></script>
 	<script src="js/libs/stats.min.js"></script>
-	<script src="js/index3.js"></script>
+	<script src="data/positionData.js"></script>
+	<script src="data/teamsOption.js"></script>
+	<script src="js/XCTF.js"></script>
+	<script src="js/test.js"></script>
 </body>
 </html>
