使用按钮开始测试

--- a/index.html
+++ b/index.html
@@ -17,9 +17,33 @@
 	     	z-index: 100;
 	     	/*top:0px;*/
 	     }
+	     .test-btn{
+	     	display: inline-block;
+			zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
+			*display: inline;
+			vertical-align: baseline;
+			margin: 0 2px;
+			outline: none;
+			cursor: pointer;
+			text-align: center;
+			text-decoration: none;
+			font: 14px/100% Arial, Helvetica, sans-serif;
+			padding: .5em 2em .55em;
+			text-shadow: 0 1px 1px rgba(0,0,0,.3);
+			-webkit-border-radius: .5em;
+			-moz-border-radius: .5em;
+			border-radius: .5em;
+			-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+			-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+			box-shadow: 0 1px 2px rgba(0,0,0,.2); 
+			position: absolute;
+			right: 10px;
+			z-index: 1000;
+	     }
      </style>
 </head>
 <body>
+	<button type="button" class="test-btn">开始</button>
 	<script src="js/libs/jquery.min.js"></script>
 	<script src="js/libs/tween.js"></script>
 	<script src="js/libs/three.min.js"></script>
