整理代码，修改readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Email: me@hujiulong.com
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title></title>
 	<link rel="stylesheet" href="css/index.css">
 </head>
@@ -15,9 +16,6 @@ Email: me@hujiulong.com
 		<h3>XCTF 2016 FINAL</h3>
 	</div>
 	<div class="ui-round">
-		<div class="snwa-logo">
-			<img src="img/sn.png" alt="" >
-		</div>
 		<h3>尚未开始</h3>
 	</div>
 	<div class="ui ui-datatable-source">
