添加初始化参数

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@ Email: me@hujiulong.com
 		</div>
 	</div>
 	
+	<div class="progressMask">
+		<div class="progress">
+			<div class="progressBar"></div>
+		</div>
+	</div>
+	
   	<script src="js/data/positionData.js"></script>
 	<script src="js/config/teamsOption.js"></script>
 	<script src="js/libs/jquery.min.js"></script>
